# ct-sr-lab

./: .gitignore  pyproject.toml
notebooks/: 01_data_exploration.ipynb  02_Flow Matching for Super-Resolution.ipynb
src/: process_ct_series.py
src/splits/: generate_splits.py
