[project]
name = "ct-sr-lab"
version = "0.1.0"
description = ""
authors = [
    {name = "Izuki Matsuba"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "tciaclient (>=0.0.3,<0.0.4)",
    "pydicom (>=3.0.1,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "opencv-python-headless (>=4.11.0.86,<5.0.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
notebook = "^7.4.2"
ipykernel = "^6.29.5"

